--- a/login.html
+++ b/login.html
@@ -86,7 +86,23 @@
 							<a href="#">Gi<span>Lu</span></a>
 						</div>
 						<nav class="navbar">
-							
+							<ul class="navbar_menu">
+								<li><a href="#">principal</a></li>
+								<li><a href="#">fazer compras</a></li>
+								<li><a href="#">promoções</a></li>
+								<li><a href="#">blog</a></li>
+								<li><a href="contact.html">login</a></li>
+							</ul>
+							<ul class="navbar_user">
+								<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+								<li class="checkout">
+									<a href="#">
+										<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+										<span id="checkout_items" class="checkout_items">2</span>
+									</a>
+								</li>
+							</ul>
 							<div class="hamburger_container">
 								<i class="fa fa-bars" aria-hidden="true"></i>
 							</div>
