--- a/login.html
+++ b/login.html
@@ -252,7 +252,26 @@
 
 		</div>
 	</div>
-
+<div class="newsletter">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6">
+					<div class="newsletter_text d-flex flex-column justify-content-center align-items-lg-start align-items-md-center text-center">
+						<h4>Noticias</h4>
+						<p>Receba 20% de desconto na sua primeira compra</p>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<form action="post">
+						<div class="newsletter_form d-flex flex-md-row flex-column flex-xs-column align-items-center justify-content-lg-end justify-content-center">
+							<input id="newsletter_email" type="email" placeholder="Seu email" required="required" data-error="Digite seu e-mail.">
+							<button id="newsletter_submit" type="submit" class="newsletter_submit_btn trans_300" value="Submit">Cadastrar-se</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap4/popper.js"></script>
 <script src="styles/bootstrap4/bootstrap.min.js"></script>
