--- a/index.html
+++ b/index.html
@@ -120,12 +120,11 @@
 
     </header>  
 
-       <div class="main_slider" style="background-image:url(images/slider_1.jpg)">
+       <div class="main_slider" style="background-image:url(images/lojaaa.png)">
           <div class="container fill_height">
             <div class="row align-items-center fill_height">
               <div class="col">
                 <div class="main_slider_content">
-                  <h6>COLEÇÃO PRIMAVERA / VERÃO 2018</h6>
                   <h1>Ganhe até 30% de desconto em recém-chegados</h1>
                 </div>
               </div>
