--- a/login.html
+++ b/login.html
@@ -90,8 +90,8 @@
 						</div>
 						<nav class="navbar">
 							<ul class="navbar_menu">
-								<li><a href="#">principal</a></li>
-								<li><a href="#">fazer compras</a></li>
+								<li><a href="index.html">principal</a></li>
+								<li><a href="produto.html">fazer compras</a></li>
 								<li><a href="#">promoções</a></li>
 								<li><a href="#">blog</a></li>
 								<li><a href="contact.html">login</a></li>
@@ -181,7 +181,7 @@
 
 				<div class="breadcrumbs d-flex flex-row align-items-center">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">Principal/a></li>
 						<li class="active"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Contatos</a></li>
 					</ul>
 				</div>
